# opspilot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  dev-log.md  dev_log.md  prd.md
src/opspilot/: __init__.py  cli.py  main.py
src/opspilot/commands/: __init__.py  info.py
src/opspilot/core/: __init__.py  registry.py  system_info.py
src/opspilot/models/: __init__.py  system.py
src/opspilot/plugins/: __init__.py
src/opspilot/tests/: __init__.py
src/opspilot/utils/: __init__.py
tests/: test_system_info.py
